--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <properties>
 
     <!-- main version setting -->
-    <spring.version>2.5.6</spring.version>
         <slf4j.version>1.7.7</slf4j.version>
         <!-- tools version setting -->
         <slf4j.version>1.7.7</slf4j.version>
@@ -27,29 +26,16 @@
     </properties>
   <dependencies>
 
-      <dependency>
-          <groupId>com.54chen</groupId>
-          <artifactId>paoding-rose-scanning</artifactId>
-          <version>1.0</version>
-      </dependency>
 
       <dependency>
-          <groupId>com.54chen</groupId>
+          <groupId>net.paoding</groupId>
           <artifactId>paoding-rose</artifactId>
-          <version>1.0</version>
+          <version>2.0-SNAPSHOT</version>
       </dependency>
 
-      <dependency>
-          <groupId>com.54chen</groupId>
-          <artifactId>paoding-rose-portal</artifactId>
-          <version>1.0</version>
-      </dependency>
 
-      <dependency>
-          <groupId>com.54chen</groupId>
-          <artifactId>paoding-rose-jade</artifactId>
-          <version>1.1</version>
-      </dependency>
+
+
       <dependency>
           <groupId>javax.servlet</groupId>
           <artifactId>jstl</artifactId>
@@ -159,6 +145,16 @@
           <groupId>com.fasterxml.jackson.module</groupId>
           <artifactId>jackson-module-jaxb-annotations</artifactId>
           <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.10</version>
       </dependency>
   </dependencies>
   <build>
