--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
   <param-name>log4jConfigLocation</param-name>
   <param-value>/WEB-INF/log4j.properties</param-value>
 </context-param>
+  <context-param>
+    <param-name>portalExecutorCorePoolSize</param-name>
+    <param-value>1024</param-value>
+  </context-param>
 
   <!--<listener>-->
     <!--<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>-->
