--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,11 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>5.1.10</version>
       </dependency>
+      <dependency>
+          <groupId>net.coobird</groupId>
+          <artifactId>thumbnailator</artifactId>
+          <version>0.4.8</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>roseexample</finalName>
